Refactoring theme 14, 16, 22. Sorting and renaming topics

--- a/app/src/main/res/layout/activity_main_change_color.xml
+++ b/app/src/main/res/layout/activity_main_change_color.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".color.MainChangeColorActivity">
+    tools:context=".theme16TestingAndDebugging.color.MainChangeColorActivity">
 
     <Button
         android:id="@+id/goChangeColorPageButton"
