--- a/app/src/main/res/layout/activity_change_color.xml
+++ b/app/src/main/res/layout/activity_change_color.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".color.ChangeColorActivity">
+    tools:context=".theme16TestingAndDebugging.color.ChangeColorActivity">
 
     <TextView
         android:layout_width="wrap_content"
