--- a/app/src/main/res/layout/fragment_b_theme_26.xml
+++ b/app/src/main/res/layout/fragment_b_theme_26.xml
@@ -9,8 +9,9 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_second_fragment"
+        android:text="@string/color"
         android:gravity="center_horizontal"
+        android:textSize="50sp"
         android:layout_marginTop="30dp"/>
 
 </FrameLayout>
