--- a/app/src/main/res/layout/fragment_c_theme_26.xml
+++ b/app/src/main/res/layout/fragment_c_theme_26.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".theme26Fragment.FragmentC">
 
     <CheckBox
-        android:id="@+id/changingColorCheckBox"
-        android:layout_width="match_parent"
+        android:id="@+id/CheckBox1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:checked="false"
-        android:text="Hello third fragment" />
+        android:gravity="center"
+        android:text="покрасить в синий"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:id="@+id/changingBoldCheckBox"
-        android:layout_width="match_parent"
+        android:id="@+id/CheckBox2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="32dp"
         android:checked="false"
-        android:gravity="center_horizontal"
-        android:text="Hello third fragment" />
+        android:gravity="center"
+        android:layout_marginStart="20dp"
+        android:text="покрасить в красный"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
