--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="green">#4CAF50</color>
     <color name="blue">#2196F3</color>
     <color name="white">#FFFFFF</color>
-
+    <color name="black">#000000</color>
 
 </resources>
