--- a/app/src/main/res/layout/activity_theme_24_cash_machine.xml
+++ b/app/src/main/res/layout/activity_theme_24_cash_machine.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".theme24.atm.CashMachine">
+    tools:context=".theme24Threads.atm.CashMachine">
 
 
     <TextView
