--- a/app/src/main/res/layout/activity_theme_25_service.xml
+++ b/app/src/main/res/layout/activity_theme_25_service.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".theme25.ServiceActivity">
+    tools:context=".theme25Services.ServiceActivity">
 
 
     <Button
