--- a/app/src/main/res/layout/activity_graphics.xml
+++ b/app/src/main/res/layout/activity_graphics.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".theme27_2Dgraphics.GraphicsActivity">
 
+    <View
+        android:id="@+id/backGround"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <Button
+        android:id="@+id/buttonClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
