--- a/app/src/main/res/layout/activity_theme_27_graphics.xml
+++ b/app/src/main/res/layout/activity_theme_27_graphics.xml
@@ -25,7 +25,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.example.lessonsFromSamsung.theme27_2Dgraphics.DrawWithClicks
+    <com.example.lessonsFromSamsung.theme27_2Dgraphics.draw.DrawWithClicks
         android:id="@+id/drawingField"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
