--- a/app/src/main/res/layout/activity_theme_30_5_list_item.xml
+++ b/app/src/main/res/layout/activity_theme_30_5_list_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="72dp"
+    android:background="?selectableItemBackground"
     android:orientation="vertical">
 
     <TextView
@@ -11,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Example1"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textViewSmall"
@@ -19,5 +20,5 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Example2"
-        android:textSize="16sp"/>
+        android:textSize="16sp" />
 </LinearLayout>
