Add: Service with RxJava

--- a/app/src/main/res/layout/activity_theme_25_btn.xml
+++ b/app/src/main/res/layout/activity_theme_25_btn.xml
@@ -4,16 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".theme25_services.ServiceActivity">
-
+    tools:context=".theme25_services.serviceWithRxjava.BtnActivity">
 
     <Button
-        android:id="@+id/notificationButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnService"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Make toast"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
